left.css
/* This CSS file is used for styling the navigation menu */

#TOC ul,
#TOC li,
#TOC span,
#TOC a {
  margin: 0;
  padding: 0;
  position: relative;
}
#TOC {
  line-height: 1;
  border-radius: 5px 5px 0 0;
  background: #141414;
  background: linear-gradient(to bottom, #333333 0%, #141414 100%);
  border-bottom: 2px solid #0fa1e0;
  width: auto;
}
#TOC:after,
#TOC ul:after {
  content: '';
  display: block;
  clear: both;
}
#TOC a {
  background: #141414;
  background: linear-gradient(to bottom, #333333 0%, #141414 100%);
  color: #ffffff;
  display: block;
  padding: 19px 20px;
  text-decoration: none;
  text-shadow: none;
}
#TOC ul {
  list-style: none;
}
#TOC > ul > li {
  display: inline-block;
  float: left;
  margin: 0;
}
#TOC > ul > li > a {
  color: #ffffff;
}
#TOC > ul > li:hover:after {
  content: '';
  display: block;
  width: 0;
  height: 0;
  position: absolute;
  left: 50%;
  bottom: 0;
  border-left: 10px solid transparent;
  border-right: 10px solid transparent;
  border-bottom: 10px solid #0fa1e0;
  margin-left: -10px;
}
#TOC > ul > li:first-child > a {
  border-radius: 5px 0 0 0;
}
#TOC.align-right > ul > li:first-child > a,
#TOC.align-center > ul > li:first-child > a {
  border-radius: 0;
}
#TOC.align-right > ul > li:last-child > a {
  border-radius: 0 5px 0 0;
}
#TOC > ul > li.active > a,
#TOC > ul > li:hover > a {
  color: #ffffff;
  box-shadow: inset 0 0 3px #000000;
  background: #070707;
  background: linear-gradient(to bottom, #262626 0%, #070707 100%);
}
#TOC .has-sub {
  z-index: 1;
}
#TOC .has-sub:hover > ul {
  display: block;
}
#TOC .has-sub ul {
  display: none;
  position: absolute;
  width: 200px;
  top: 100%;
  left: 0;
}
#TOC .has-sub ul li a {
  background: #0fa1e0;
  border-bottom: 1px dotted #31b7f1;
  filter: none;
  display: block;
  line-height: 120%;
  padding: 10px;
  color: #ffffff;
}
#TOC .has-sub ul li:hover a {
  background: #0c7fb0;
}
#TOC ul ul li:hover > a {
  color: #ffffff;
}
#TOC .has-sub .has-sub:hover > ul {
  display: block;
}
#TOC .has-sub .has-sub ul {
  display: none;
  position: absolute;
  left: 100%;
  top: 0;
}
#TOC .has-sub .has-sub ul li a {
  background: #0c7fb0;
  border-bottom: 1px dotted #31b7f1;
}
#TOC .has-sub .has-sub ul li a:hover {
  background: #0a6d98;
}
#TOC ul ul li.last > a,
#TOC ul ul li:last-child > a,
#TOC ul ul ul li.last > a,
#TOC ul ul ul li:last-child > a,
#TOC .has-sub ul li:last-child > a,
#TOC .has-sub ul li.last > a {
  border-bottom: 0;
}
#TOC ul {
  font-size: 1.5rem;
}

/* New styles for the navigation menu */
#navMenu {
  width: 250px;
  background-color: white;
  border-right: 1px solid #dee2e6;
  padding: 20px;
  position: fixed;
  top: 0;
  left: 0;
  height: 100%;
  overflow-y: auto;
}

#navMenu ul {
  list-style: none;
  padding: 0;
}

#navMenu li {
  margin-bottom: 10px;
}

#navMenu a {
  color: #000000;
  text-decoration: none;
  font-weight: bold;
  font-family: 'Open Sans', sans-serif;
  line-height: 1.5; /* Reduced line-height for less space between lines */
  padding: 7px 0; /* Reduced padding for less space between lines */
  display: block; /* Make the entire line clickable */
  width: 100%; /* Make the entire line clickable */
}

#navMenu a:hover {
  font-weight: bold;
  margin-left: 5px;
}

#navMenu .current-section {
  font-weight: bold;
  color: #0056b3;
}

.content {
  background-color: white;
  padding-left: 250px; /* Add padding to the left to account for the sidebar */
  text-align: center; /* Ensure the title is aligned to the center considering the sidebar */
}

/* Ensure the sidebar is not visible by default on smaller screens */
@media (max-width: 768px) {
  #navMenu {
    display: none;
  }

  #navMenu.visible {
    display: block;
  }

  .content {
    padding-left: 0; /* Remove padding when sidebar is not visible */
  }
}

